Increase bottom margin

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@primer/css@17.4.0/dist/primer.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-syntax-{{ theme }}@0.5.0/lib/github-{{ theme }}.css">
 	</head>
-	<body class="mt-7 container-lg px-3">
+	<body class="my-7 container-lg px-3">
 		<div class="Box">
 			<div class="position-sticky top-0 border-bottom color-bg-primary rounded-top-2 p-2 d-flex flex-items-center">
 				<span class="p-2 mr-2">
